--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div class="class" id="place">
 		<div class="class1">
 			<img class="image" src="image/new.png" alt="image">
-			<a class="close" href="#2"><img src="image/close.png" alt="close" title="удалить блок"></a>
+			<a class="close" href="#2" name="close"><img src="image/close.png" alt="close" title="удалить блок"></a>
 			<br><span class="color">Umaid Bhawan Palace Jodhpur</span>
 			<br><span class="grey">адресс :</span> Near Circuit House, Джодхпур 342006, Индия
 			<br><span class="grey">контакты :</span> (+34)93-603-90-00 (+34)93-268-19-45 | <a href="http://taj.tajhotels.com" target="_blank">taj.tajhotels.com</a> , umaidbhawan.jodhpur@tajhotels.com
@@ -240,14 +240,14 @@
    			<br><input type="text" name="adress" size="50" placeholder="Полный адресс">
    			<br><span class="left"><label>Телефон:</label></span>
    			<br>
-   			<input type="number" id="number" name="phone" size="20"  maxlength="19" placeholder="Телефон">
+   			<input type="number" id="number" name="phone" size="20" placeholder="Телефон">
    			<br><span><label>Сайт:</label>
    			<br>
    			<input type="text" name="web" placeholder="Сайт"></span>
    			<br><span><label>Url картинки:</label>
    			<br>
    			<input type="text" name="img" placeholder="Ссылка на картинку">
-			<input type="button" id="showImage" value="Показать"></input>
+			<input type="button" id="showImage" value="Показать">
    			</span>
    			<br><label>Информация:</label>
    			<br><textarea name="info"></textarea>
